JarDirectoryStep to RelPath v2.
Summary:
^

Fixes:
* Added ability to specify `overrideSourceContainers` inside `JarBuilder` and use it in `JavaBinary` to handle resources from `meta_inf_staging`
* No need to have `RelPath.COMPARATOR` as we already had the same logic in `RelPath.comparator()`
* New method `SourcePathResolver.getAllRelativePaths`
* Updated integration test  `JavaBinaryIntegrationTest#jarWithMetaInfo` to handle the case where duplicates are present.

 ---

Reviewed By: stepancheg

shipit-source-id: 500198bb1a593340d9686f3b36b64f218806d9dd